--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,15 +1,16 @@
 {
-  "name": "Server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "json-server": "^1.0.0-beta.2"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node",
+      "config": {}
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/*",
+      "dest": "index.js"
+    }
+  ]
 }
